--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -90,6 +90,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "055efbd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "args = [3, 6]\n",
+    "list(range(*args))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "021aecea",
    "metadata": {},
@@ -238,47 +260,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "id": "a8d710e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1   1    1\n",
+      " 2   4    8\n",
+      " 3   9   27\n",
+      " 4  16   64\n",
+      " 5  25  125\n",
+      " 6  36  216\n",
+      " 7  49  343\n",
+      " 8  64  512\n",
+      " 9  81  729\n",
+      "10 100 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(1, 11):\n",
+    "    print(repr(x).rjust(2), repr(x*x).rjust(3), end=' ')\n",
+    "    # Note use of 'end' on previous line\n",
+    "    print(repr(x*x*x).rjust(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "12ba05bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Mercury': 'M',\n",
-       " 'Venus': 'V',\n",
+       "{'Jupiter': 'J',\n",
        " 'Mars': 'M',\n",
-       " 'Jupiter': 'J',\n",
+       " 'Mercury': 'M',\n",
+       " 'Neptune': 'N',\n",
        " 'Saturn': 'S',\n",
        " 'Uranus': 'U',\n",
-       " 'Neptune': 'N'}"
+       " 'Venus': 'V'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
-    "planet_to_initial = {planet: planet[0] for planet in planets if planet != 'Earth'}\n",
+    "planet_to_initial = {planet: planet[0] for planet in sorted(planets) if planet != 'Earth'}\n",
     "planet_to_initial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "0c1d31b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "planet_to_initial = {'Mercury': 'M',\n",
-    " 'Venus': 'V',\n",
-    " 'Mars': 'M',\n",
-    " 'Jupiter': 'J',\n",
-    " 'Saturn': 'S',\n",
-    " 'Uranus': 'U',\n",
-    " 'Neptune': 'N'}"
    ]
   },
   {
@@ -304,6 +340,29 @@
    "source": [
     "for planet, initial in planet_to_initial.items():\n",
     "    print(\"{} begins with \\\"{}\\\"\".format(planet.rjust(8), initial))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1387d149",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "orange\n",
+      "pear\n"
+     ]
+    }
+   ],
+   "source": [
+    "basket = ['apple', 'orange', 'apple', 'pear', 'orange', 'banana']\n",
+    "for f in sorted(set(basket)):\n",
+    "    print(f)"
    ]
   },
   {
@@ -578,6 +637,29 @@
     "    print(i)\n",
     "else:\n",
     "    print(\"Loop completed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c081d1db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "7\n",
+      "5\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in reversed(range(1, 10, 2)):\n",
+    "    print(i)"
    ]
   },
   {
@@ -1689,7 +1771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
