--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -568,6 +568,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "017f9c78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'earth/mars/venus'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def concat(*args, sep=\"/\"):\n",
+    "    return sep.join(args)\n",
+    "\n",
+    "concat(\"earth\", \"mars\", \"venus\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1f922d61",
    "metadata": {},
@@ -747,6 +771,30 @@
     "\n",
     "print(cube(7))\n",
     "print(cube_v2(7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8375098a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def make_incrementor(n):\n",
+    "    return lambda x: x + n\n",
+    "f = make_incrementor(42)\n",
+    "f(1)"
    ]
   },
   {
