--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -424,6 +424,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def most_frequent(List):\n",
+    "    return max(set(List), key=List.count)\n",
+    "\n",
+    "List = [2, 1, 2, 2, 1, 3]\n",
+    "print(most_frequent(List))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "id": "6597a160",
    "metadata": {},
