--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -882,7 +882,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open(\"data.csv\", \"w\", newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow([\"Name\", \"Age\", \"City\"])\n",
+    "    writer.writerows([\n",
+    "        [\"Alice\", \"30\", \"New York\"],\n",
+    "        [\"Bob\", \"35\", \"London\"],\n",
+    "        [\"Charlie\", \"25\", \"San Francisco\"]\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +911,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Name', 'Age', 'City'], ['Alice', '30', 'New York'], ['Bob', '35', 'London'], ['Charlie', '25', 'San Francisco'], ['Xyz', '36', 'Baglore']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.csv\", \"r\", newline='') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    data = list(reader)  # Reads all rows at once\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -902,8 +940,8 @@
      "text": [
       "Alice 30 New York\n",
       "Bob 35 London\n",
-      "Bob 35 London\n",
-      "Abc 34 Baglore\n"
+      "Charlie 25 San Francisco\n",
+      "Xyz 36 Baglore\n"
      ]
     }
    ],
@@ -912,6 +950,27 @@
     "    reader = csv.DictReader(file)\n",
     "    for row in reader:\n",
     "        print(row[\"Name\"], row[\"Age\"], row[\"City\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['30', '35', '25', '36']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.csv\", \"r\", newline='') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    header = next(reader)  # Skip the header row if there is one\n",
+    "    age_column = [row[1] for row in reader]  # Assuming \"Age\" is the second column\n",
+    "    print(age_column)"
    ]
   },
   {
