--- a/Python Basics/3.Data Type and Stucture.ipynb
+++ b/Python Basics/3.Data Type and Stucture.ipynb
@@ -1761,6 +1761,101 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List after swapping first and last elements: [5, 2, 3, 4, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize a list\n",
+    "my_list = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# Interchange first and last elements\n",
+    "my_list[0], my_list[-1] = my_list[-1], my_list[0]\n",
+    "\n",
+    "# Print the modified list\n",
+    "print(\"List after swapping first and last elements:\", my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2, 3]\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [1, 2, 3, 4]\n",
+    "\n",
+    "a, *b, c = list\n",
+    "\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [4, 5, 6]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = [4, 5, 6]\n",
+    "c = [a,b]\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = [4, 5, 6]\n",
+    "\n",
+    "# Use the unpacking operator to merge the lists\n",
+    "c = [*a, *b]\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3550,7 +3645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
