--- a/Python Basics/7.Exception Handling.ipynb
+++ b/Python Basics/7.Exception Handling.ipynb
@@ -11,14 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Exception handling in Python is a mechanism for responding to runtime errors in a controlled manner. Instead of abruptly terminating a program when an error occurs, Python allows you to \"catch\" exceptions and take appropriate actions, ensuring the program can continue running or terminate gracefully.\n",
+    "\n",
+    "\n",
     "The errors in the software are called \"bugs\" and process of removing them is called \"debugging\".\n",
     "\n",
-    "We can classify errors in a program into one of these 3 types:\n",
-    "- **Syntax Errors:** These are syntactical errors found in the code, due to which a program fails to compile.\n",
+    "#### **Why Use Exception Handling?**\n",
     "\n",
-    "- **runtime errors:**  These errors occur during the execution of a program. They are not detected by the Python compiler but are identified by the Python Virtual Machine (PVM) at runtime. \n",
-    "\n",
-    "- **logical errors:** These errors depict flaws in the logic of the program. The programmer might be using a wrong formula or the design of the program itself is wrong. Logical errors are not detected either by python compiler or PVM.The programmer is solely responsible for them."
+    "- Prevent Crashes: Handle unexpected errors without crashing the program.\n",
+    "- Improve User Experience: Provide meaningful feedback to the user.\n",
+    "- Debugging: Help in identifying and debugging errors effectively.\n",
+    "- Ensure Resource Management: Clean up resources like files or network connections regardless of errors.\n"
    ]
   },
   {
@@ -39,13 +42,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**try:** The try block is used to enclose the code that might raise an exception.\n",
+    "#### **Key Components of Exception Handling**\n",
     "\n",
-    "**except:** The except block is where you handle the exception. If an exception occurs in the try block, the control is transferred to the except block that matches the type of exception.\n",
+    "**try Block:**\n",
     "\n",
-    "**else:** It is executed if no exceptions are raised in the try block.\n",
+    "- Contains the code that might raise an exception.\n",
+    "- If no exception occurs, the try block completes successfully.\n",
     "\n",
-    "**finally:** It is always executed regardless of whether an exception occurred or not. It is typically used for cleanup code that must be executed no matter what."
+    "**except Block:**\n",
+    "\n",
+    "- Catches and handles the exception raised in the try block.\n",
+    "- Multiple except blocks can handle different types of exceptions.\n",
+    "\n",
+    "**else Block:**\n",
+    "\n",
+    "- Executes only if no exceptions were raised in the try block.\n",
+    "- Used for code that should run after the try block's success.\n",
+    "\n",
+    "**finally Block:**\n",
+    "\n",
+    "- Executes unconditionally after the try and except blocks.\n",
+    "- Typically used for cleanup operations like closing a file or releasing resources."
    ]
   },
   {
@@ -117,6 +134,49 @@
     "# These occur when the code violates Python’s syntax rules.\n",
     "\n",
     "print \"Hello, World!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43my\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'y' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "syntax error\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    x = 10\n",
+    "    print(y)\n",
+    "except:\n",
+    "    print(\"syntax error\") "
    ]
   },
   {
@@ -303,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,9 +376,50 @@
    ],
    "source": [
     "try:\n",
-    "  print(x)\n",
+    "  print(p)\n",
     "except:\n",
     "  print(\"An exception occurred\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An exception occurred\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "  print(p)\n",
+    "except NameError:\n",
+    "  print(\"An exception occurred\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "General error! Watch out!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    for i in [1,2,3,4]:\n",
+    "        print(i[4])\n",
+    "except TypeError:\n",
+    "    print(\"General error! Watch out!\")"
    ]
   },
   {
@@ -345,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +454,8 @@
      "output_type": "stream",
      "text": [
       "Second element = 2\n",
-      "An error occurred\n"
+      "An error occurred\n",
+      "Third element = 3\n"
      ]
     }
    ],
@@ -363,41 +465,21 @@
     "\tprint (f\"Second element = {a[1]}\") \n",
     "\tprint (f\"Fourth element = {a[3]}\") # IndexError\n",
     "except:\n",
-    "\tprint (\"An error occurred\")"
+    "\tprint (\"An error occurred\")\n",
+    " \n",
+    "print(f\"Third element = {a[2]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m6\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m z \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(z)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
-     ]
-    }
-   ],
-   "source": [
-    "a = [1,2,3,'A','B',6]\n",
-    "z = a[0] + a[3]\n",
-    "print(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Index Error\n",
       "unsupported operand type(s) for +: 'int' and 'str'\n"
      ]
     }
@@ -406,19 +488,42 @@
     "a = [1,2,3,'A','B',6]\n",
     "\n",
     "try:\n",
-    "    z = a[0] + a[3]\n",
-    "    print(z)\n",
     "    print(a[6])\n",
-    "    \n",
     "except IndexError:\n",
     "    print(\"Index Error\")\n",
+    "    \n",
+    "try:\n",
+    "    z = a[0] + a[3]\n",
+    "    print(z)\n",
     "except TypeError:\n",
     "    print(\"unsupported operand type(s) for +: 'int' and 'str'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m user_input \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEnter a number: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m user_input\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'a'"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = int(input(\"Enter a number: \"))\n",
+    "user_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -438,28 +543,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File not found. [Errno 2] No such file or directory: 'example.txt'\n"
+      "File not found. [Errno 2] No such file or directory: 'requirements.txt'\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    with open(\"example.txt\", \"r\") as file:\n",
+    "    with open(\"requirements.txt\", \"r\") as file:\n",
     "        content = file.read()\n",
+    "        print(content)\n",
     "except FileNotFoundError as e:\n",
     "    print(f\"File not found. {e}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -473,13 +579,13 @@
    "source": [
     "try:\n",
     "    result = 10 / 0\n",
-    "except:\n",
+    "except ZeroDivisionError:\n",
     "    print(\"Cannot divide by zero.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +598,7 @@
    ],
    "source": [
     "try:\n",
-    "  print(x)\n",
+    "  print(h)\n",
     "except NameError:\n",
     "  print(\"Variable x is not defined\")\n",
     "except:\n",
@@ -900,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
