--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
     "    {\"name\": \"Alice\", \"age\": 30, \"city\": \"New York\"},\n",
     "    {\"name\": \"Bob\", \"age\": 25, \"city\": \"Los Angeles\"},\n",
     "    {\"name\": \"Charlie\", \"age\": 35, \"city\": \"Chicago\"},\n",
-    "    {\"name\": \"David\", \"age\": 28, \"city\": \"San Francisco\"}\n",
+    "    {\"name\": {\"First_name\":\"777\", \"Last_name\":\"Charli\"}, \"age\": 28, \"city\": \"San Francisco\"}\n",
     "]\n",
     "\n",
     "with open(\"data.json\", \"w\") as file:\n",
@@ -1044,34 +1044,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_entry = {\"name\": \"Python\", \"age\": 31, \"city\": \"Bangalore\"}\n",
-    "data.append(new_entry)\n",
-    "\n",
-    "with open(\"data.json\", \"w\") as file:\n",
-    "    json.dump(data, file, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Alice', 'age': 30, 'city': 'New York'}, {'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}, {'name': 'Charlie', 'age': 35, 'city': 'Chicago'}, {'name': 'David', 'age': 28, 'city': 'San Francisco'}, {'name': 'Python', 'age': 31, 'city': 'Bangalore'}, {'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n"
+      "[{\"name\": \"Alice\", \"age\": 30, \"city\": \"New York\"}, {\"name\": \"Bob\", \"age\": 25, \"city\": \"Los Angeles\"}, {\"name\": \"Charlie\", \"age\": 35, \"city\": \"Chicago\"}, {\"name\": {\"First_name\": \"777\", \"Last_name\": \"Charli\"}, \"age\": 28, \"city\": \"San Francisco\"}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.json\", \"r\") as f:\n",
+    "    data = f.read()\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Alice', 'age': 30, 'city': 'New York'}, {'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}, {'name': 'Charlie', 'age': 35, 'city': 'Chicago'}, {'name': {'First_name': '777', 'Last_name': 'Charli'}, 'age': 28, 'city': 'San Francisco'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.json\", \"r\") as f:\n",
+    "    data = json.load(f)\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice\n",
+      "Bob\n",
+      "Charlie\n",
+      "{'First_name': '777', 'Last_name': 'Charli'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load data from the JSON file\n",
+    "with open(\"data.json\", \"r\") as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# Access and print the 'city' for each person\n",
+    "for person in data:\n",
+    "    print(person[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "777\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load data from the JSON file\n",
+    "with open(\"data.json\", \"r\") as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# Access the 'city' of the first person\n",
+    "city_of_first_person = data[3][\"name\"]['First_name']\n",
+    "print(city_of_first_person)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_entry = [{\"name\": \"Python\", \"age\": 31, \"city\": \"Bangalore\"}]\n",
+    "data.append(new_entry)\n",
+    "\n",
+    "with open(\"data.json\", \"w\") as file:\n",
+    "    json.dump(data, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Alice', 'age': 30, 'city': 'New York'}\n",
+      "{'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}\n",
+      "{'name': 'Charlie', 'age': 35, 'city': 'Chicago'}\n",
+      "{'name': {'First_name': '777', 'Last_name': 'Charli'}, 'age': 28, 'city': 'San Francisco'}\n",
+      "[{'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n",
+      "[{'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n"
      ]
     }
    ],
    "source": [
     "with open(\"data.json\", \"r\") as file:\n",
-    "    data = json.load(file)\n",
-    "    print(data)"
+    "    data = json.load(file)  # Parse the JSON array\n",
+    "    for item in data:\n",
+    "        print(item)  # Print each item in the array"
    ]
   },
   {
