--- a/Python Basics/7.Exception Handling.ipynb
+++ b/Python Basics/7.Exception Handling.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -607,14 +607,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cannot divide by zero.\n"
+      "Entered value is not a valid integer.\n"
      ]
     }
    ],
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -728,14 +728,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
+      "Something went wrong\n",
       "The 'try except' is finished\n"
      ]
     }
@@ -743,7 +743,7 @@
    "source": [
     "try:\n",
     "    x = 10\n",
-    "    print(x)\n",
+    "    print(r)\n",
     "except:\n",
     "    print(\"Something went wrong\")\n",
     "finally:\n",
@@ -752,14 +752,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Something went wrong\n",
+      "1\n",
       "The 'try except' is finished\n"
      ]
     }
@@ -775,33 +775,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Can't divide by zero\n",
+      "2\n",
       "This is always executed\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "\tk = 5//0\n",
-    "\tprint(k)\n",
-    "\n",
+    "    a = int(input(\"Enter a: \"))\n",
+    "    k = 5//a\n",
     "except ZeroDivisionError:\n",
     "\tprint(\"Can't divide by zero\")\n",
-    "\n",
+    "except ValueError:\n",
+    "\tprint(\"Please enter a valid value\")\n",
+    "else:\n",
+    "    print(k)\n",
     "finally:\n",
     "\tprint('This is always executed')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error\n",
+      "Done\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a = [1,2,3]\n",
+    "    print(a[3])\n",
+    "except:\n",
+    "    print(\"Error\")\n",
+    "else:\n",
+    "    print(\"No error\")\n",
+    "finally:\n",
+    "    print(\"Done\")\n",
+    "    \n",
+    "    a = 10\n",
+    "    print(a)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -825,14 +858,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Division result: 2.0\n",
+      "Cannot divide by zero: division by zero\n",
       "Finally block: This code always runs.\n"
      ]
     }
@@ -847,9 +880,9 @@
     "    # Handle a specific type of exception (ValueError in this case)\n",
     "    print(\"Invalid input. Please enter a valid number.\")\n",
     "\n",
-    "except ZeroDivisionError:\n",
+    "except Exception as e:\n",
     "    # Handle another specific type of exception (ZeroDivisionError)\n",
-    "    print(\"Cannot divide by zero.\")\n",
+    "    print(f\"Cannot divide by zero: {e}\")\n",
     "\n",
     "else:\n",
     "    # This block is executed if no exceptions are raised\n",
@@ -880,6 +913,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "a is odd number",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma is odd number\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mException\u001b[0m: a is odd number"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "\n",
+    "if a%2==0:\n",
+    "    raise Exception(\"a is odd number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
    "outputs": [
@@ -904,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +971,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(x) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m----> 4\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOnly integers are allowed\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[28], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(x) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m----> 4\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOnly integers are allowed\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mTypeError\u001b[0m: Only integers are allowed"
      ]
     }
@@ -922,7 +979,7 @@
    "source": [
     "x = \"hello\"\n",
     "\n",
-    "if not type(x) is int:\n",
+    "if type(x) is not int:\n",
     "  raise TypeError(\"Only integers are allowed\")"
    ]
   },
@@ -962,14 +1019,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cannot divide by zero\n"
+      "5.0\n",
+      "This will always execute\n"
      ]
     }
    ],
@@ -986,7 +1044,9 @@
     "except ZeroDivisionError:\n",
     "    print(\"Cannot divide by zero\")\n",
     "else:\n",
-    "    print(result)"
+    "    print(result)\n",
+    "finally:\n",
+    "    print(\"This will always execute\")"
    ]
   }
  ],
